Create a page home.html with contents as it is
Create a page home.html with contents as it is

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!--Navigation section-->
     <nav>
-        <a href="">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#home">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="">TECH STACK</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="">PROJECTS</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -31,7 +31,22 @@
         <a href="">OTHERS</a>
     </nav>
     <!--Main section-->
-    <section></section>
+    <section>
+        <!--HOME SECTION-->
+        <section id="home">
+            <h2>Professional Summary</h2>
+            <ul>
+                <li>Having 1 year of experience in developing single page web application using Angular & HTML5,CSS3,Bootstrap5,javascript</li>
+                <li>Experience on  version control system GIT & GITHub .</li>
+                <li> Experience working with JIRA for user stories and bug tracking .</li>
+                <li>strong Debugging & Troublshootin code experience using chrome developer tool.</li>
+                <li>Working exposure on ID's like vs code & Notepad++ </li>               <li>Good working experience under Agile methodologies enviromnent</li>
+                <li>Experience in using chrome developer tool for Debugging and Troublshooting the code</li>
+                <li>knowldge of NodeJS</li> 
+                <li>Ability to work with people at all levles in the program</li>
+             </ul> 
+        </section>
+    </section>
 
     <!--Footer section-->
     <footer></footer>
