--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         color: blueviolet;
         font-style: italic;
       }
-      .span{
-        color: black;
-        font-weight: bold;
+      #experience{
+        font-weight: bolder;
+      }
+      .tech{
+        color: aqua;
       }
       .a{
         text-decoration: none;
@@ -59,15 +61,15 @@
         <section id="home">
      <h2 class="heading">Professional Summary</h2>
             <ul>
-                <li>Having 1 year of experience in developing single page web application using Angular & HTML5,CSS3,Bootstrap5,javascript</li>
-                <li style="color: blue;">Experience on  version control system GIT & GITHub .</li>
-                <li style="color: blue;"> Experience working with JIRA for user stories and bug tracking .</li>
+                <li id="experience">Having 1 year of experience in developing single page web application using <span class="tech">Angular & HTML5,CSS3,Bootstrap5,javascript</span></li>
+                <li >Experience on  version control system GIT & GITHub .</li>
+                <li > Experience working with JIRA for user stories and bug tracking .</li>
                 <li>strong Debugging & Troubleshooting code experience using chrome developer tool.</li>
-                <li style="color: blue;">Working exposure on ID's like vs code & Notepad++ </li>          
+                <li >Working exposure on ID's like vs code & Notepad++ </li>          
                 <li>Good working experience under Agile methodologies environment</li>
                 <li>Experience in using chrome developer tool for Debugging and Troubleshooting the code</li>
                 <li>knowledge of NodeJS</li> 
-                <li style="color: brown;font-style: italic;;">Ability to work with people at all levels in the program</li>
+                <li>Ability to work with people at all levels in the program</li>
              </ul> 
         </section>
         <hr>
