Attribute selector , pseudo classes and element
Attribute selector , pseudo classes and element

--- a/personalDetails.html
+++ b/personalDetails.html
@@ -22,12 +22,12 @@
         <li>Angular</li>
     </ul>
     <hr>
-    <h2>Acadamic Details</h2>
+    <h2>Academic Details</h2>
     <table border="1">
         <thead>
             <tr>
             <th>Sr.No</th>
-            <th>Acadamic</th>
+            <th>Academic</th>
             <th>College Name</th>
             <th>University/Board</th>
             </tr>
