add must try button
add must try button

--- a/index.html
+++ b/index.html
@@ -10,74 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <style>
-
-      #resume{
-        color: olive;
-        font-weight: bolder;
-      }
-       .heading{
-        color: blueviolet;
-        font-style: italic;
-        text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.276);
-        font-family: "Roboto", sans-serif;
-
-
-      }
-      #experience{
-        font-weight: bolder;
-      }
-      .tech{
-        color: aqua;
-      }
-      .a{
-        text-decoration: none;
-        color: rgb(1, 14, 9);
-        margin: 20px 20px 20px 20px;
-        padding: 10px;
-        font-family: "Roboto", sans-serif;
-
-      }
-      .header-info{
-        padding: 10px;
-        background-color: rgba(127, 255, 212, 0.463);
-        margin-right: 10px;
-        margin-left: 10px;
-        margin-top: 10px;
-        margin-bottom: 20px;
-      }
-      #resume{
-        
-        padding: 10px;
-        background-color: rgba(127, 255, 212, 0.463);
-        margin-right: 10px;
-        margin-left: 10px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
-      table,tr,th,td{
-        border: 2px solid rgb(216,186,131);
-        border-collapse: collapse;
-      }
-      #techtable{
-        width: 50%;
-      }
-      #listsummary,#copyright{
-        font-family: "Poppins",sans-serif;
-      }
-      #listsummary li{
-        list-style-type: circle;
-      }
-      .roles{
-        list-style-type:lower-alpha ;
-        
-      }
-      .roles li{
-        padding-top: 7px;
-
-      }  
-
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--Header Section-->
@@ -95,14 +28,15 @@
     </header>
 
     <!--Navigation section-->
-    <nav>
-        <a href="#home" class="a">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#techStack"class="a">TECH STACK</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#projects"class="a">PROJECTS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#education"class="a">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#personalDetails.html"target="_blank"class="a">PERSONAL DETAILS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#others"target="_blank"class="a">OTHERS</a>
-    </nav>
+    <nav id="navsection">
+      <ul>
+        <li><a href="#home" ">HOME</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#education">EDUCATION</a></li>
+        <li><a href="#personalDetails.html"target="_blank">PERSONAL DETAILS</a></li>
+        <li> <a href="#others"target="_blank">OTHERS</a></li>
+      </ul>
+      </nav>
     <!--Main section-->
     <section>
         <!--HOME SECTION-->
